Update TypeScript configuration with path aliases and include src directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,26 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
   "compilerOptions": {
+    "types": ["./src/types.d.ts"],
+    "baseUrl": "src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@layouts/*": ["layouts/*"],
+      "@pages/*": ["pages/*"],
+      "@styles/*": ["styles/*"],
+      "@scripts/*": ["scripts/*"],
+      "@libs/*": ["libs/*"],
+      "@hooks/*": ["hooks/*"],
+      "@test_utils": ["test/utils"],
+      "@icons/*": ["components/icons/*"],
+      "@store/*": ["store/*"],
+      "@data/*": ["data/*"],
+      "@utils/*": ["utils/*"],
+      "types": ["src/types.d.ts"],
+      "@middlewares/*": ["middlewares/*"]
+    },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  }
+  },
+  "include": ["src"]
 }
