--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.3",
-    "@tailwindcss/vite": "^4.0.17",
+    "@astrojs/vercel": "^8.1.3",
+    "@google/generative-ai": "^0.24.0",
+    "@pheralb/toast": "^1.0.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.0.17"
+    "react-markdown": "8.0.6",
+    "react-syntax-highlighter": "^15.6.1",
+    "tailwindcss": "^4.1.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9"
