--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vercel": "^8.1.3",
     "@google/generative-ai": "^0.24.0",
     "@pheralb/toast": "^1.0.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
