--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "format": "pnpm biome check --fix && prettier --write . "
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.3",
-    "@astrojs/vercel": "^8.1.3",
+    "@astrojs/react": "^4.2.7",
+    "@astrojs/vercel": "^8.1.4",
+    "@auth/core": "0.37.4",
     "@google/generative-ai": "^0.24.0",
     "@pheralb/toast": "^1.0.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.6.1",
+    "astro": "^5.7.13",
+    "auth-astro": "4.2.0",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "8.0.6",
